   * Stationed Guardian Micro AI: bug fix for unreachable stations
 * Campaigns:
   * Liberty:
     * Fixed possibility of no viable routes around guards in 'Hide and Seek'.
   * Son of the Black Eye:
     * S6 Black Flag: reduce randomness of unit types unloading from galleons
 * Editor:
   * Fixed falcon race missing an icon due to having incorrectly-named image
     files.
 * Language and i18n:
   * Updated translations: Portuguese
 * Multiplayer:
   * Fixed the Set Password option during game creation not having an effect
     due to a misplaced WML attribute in the client's command for the server
     (bug #23015).
 * WML engine:
   * Fixed nested macros emitting incorrect bindings to the default 'wesnoth'
     textdomain at the end of a substitution instead of the parent textdomain,
     thus breaking localization of subsequent strings (bug #22962).
   * Fixed special _initial.cfg and _final.cfg file inclusion order not being
     honored by Windows builds using Boost.filesystem (bug #22967).
   * Fixed dotfiles being included when {including} directories in WML, on
     builds using the new filesystem code (regression introduced in 1.11.19).

Version 1.12.0:
 * Language and i18n:
   * Updated translations: German, Russian
   * Fixed encoding and other issues with the system default language option
     on builds using Boost.locale (bugs #22921, #22928).
 * User interface:
   * Fixed lower button row padding for GUI1 dialogs including Statistics and
     the Add-ons Manager (bugs #22379, #22791).
 * Miscellaneous and bug fixes:
   * Fixed recursive directory creation failing for working dir-relative paths
     without an explicit `./` at the start (e.g. in `wesnoth -p data/core foo`)
     for builds using Boost.filesystem.
   * Disable start of scenario saves in MP, "fixing" bug #22068.

Version 1.11.19:
 * Campaigns:
   * Legend of Wesmere:
     * Ka’lian under attack: fixed more issues due to new map size.