@@ -7,6 +7,10 @@ Version 1.12.0+dev:
    * Liberty:
      * Fixed possibility of no viable routes around guards in 'Hide and Seek'.
 
+ * Help browser:
+   * Unit types that do not include any visible (hide_help=no) variations no
+     longer generate topic sections.
+
  * Language and i18n:
    * Updated translations: Portuguese.
 
