@@ -13,6 +13,9 @@ Version 1.12.0+dev:
  * Editor:
    * Fixed falcon race missing an icon due to having incorrectly-named image
      files.
+ * Help browser:
+   * Unit types that do not include any visible (hide_help=no) variations no
+     longer generate topic sections.
  * Language and i18n:
    * Updated translations: Portuguese
  * Multiplayer:
